--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TB Wildlife Parks</title>
+    <href rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
     <h1>Wildlife Parks of Tampa Bay</h1>
