fixing link to ll page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TB Wildlife Parks</title>
-    <href rel="stylesheet" type="text/css" href="css/styles.css">
+    <href rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <h1>Wildlife Parks of Tampa Bay</h1>
@@ -22,7 +22,7 @@
         <li><button onclick="location.href='#'">Honeymoon Island State Park</button></li>
         <li><button onclick="location.href='#'">John B Sargeant Sr. Park</button></li>
         <li><button onclick="location.href='#'">Lake Seminole Park</button></li>
-        <li><button onclick="location.href='lettucelake.html'">Lettuce Lake Park</button></li>
+        <li><button onclick="location.href='pages/lettucelake.html'">Lettuce Lake Park</button></li>
         <li><button onclick="location.href='#'">Mocassin Lake Nature Park</button></li>
         <li><button onclick="location.href='#'">Morris Bridge Park</button></li>
         <li><button onclick="location.href='#'">Robinson Preserve</button></li>
